--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@
 -figer la carte autour de la geoloc
 -rendre fonctionnel les paramètres utilisateur(charger les paramètres) FAIT
 -faire le système de crédibilité ANTOINE
--corriger le systeme de notification (on ne peux pas masquer ni éditer, et le nom de l'incident n'est pas afficher) GEOFFREY
+-finir le systeme de notification (on ne peux pas éditer, peaufiner le bazar) GEOFFREY
 -fixer le footer FAIT 
 -mettre la hauteur de carte dynamique ANTOINE
 -Améliorer le design (alignement des boutons) ALEXANDRE
