--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,15 @@
--Faire la page d'inscription(inscription par mail) 
--Memoriser les identifiants à l'aide de cookie (utiliser méthode token!)
--figer la carte autour de la geoloc
+
+-figer la carte autour de la geoloc FAIT 
 -rendre fonctionnel les paramètres utilisateur(charger les paramètres) FAIT
--faire le système de crédibilité ANTOINE
--finir le systeme de notification (on ne peux pas éditer, peaufiner le bazar) GEOFFREY
+-faire le système de crédibilité FAIT ANTOINE
 -fixer le footer FAIT 
--mettre la hauteur de carte dynamique ANTOINE
--Améliorer le design (alignement des boutons) ALEXANDRE
--Commenter le code ANTOINE
+-Commenter le code FAIT ANTOINE
+
+
 -Faire les triggers(suppression incident après 4h) GEOFFREY en local->OK(version 4h après dateHeure création... peut être potentiellement amélioré en utilisant la dernière date de +1 ou de commentaire... à discuter) sur le serveur ->NOK (problème de droits...) 
 -Faire le powerPoint ALEXANDRE
+-Améliorer le design (alignement des boutons) ALEXANDRE
+-mettre la hauteur de carte dynamique ANTOINE
+-finir le systeme de notification (on ne peux pas éditer, peaufiner le bazar) GEOFFREY
+-Faire la page d'inscription(inscription par mail) 
+-Memoriser les identifiants à l'aide de cookie (utiliser méthode token!)
