Rajout dans TODO
Contrôle du zoom sur la map Google

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,3 +10,4 @@
 -Commenter le code ANTOINE
 -Faire les triggers(suppression incident après 4h) GEOFFREY en local->OK(version 4h après dateHeure création... peut être potentiellement amélioré en utilisant la dernière date de +1 ou de commentaire... à discuter) sur le serveur ->NOK (problème de droits...) 
 -Faire le powerPoint ALEXANDRE
+-Enlever le controle du zoom sur l'api de Google
